Make ConfigLib Java 8 compatible